<resources>
    <string name="app_name">Bizz Buzz</string>
    <string name="SignUpButton">Sign-Up</string>
    <string name="firstNameBoxText">First Name</string>
    <string name="secondNameBoxText">Last Name</string>
    <string name="emailBoxText">Email Address</string>
    <string name="passwordBoxText">Password</string>
    <string name="confirmPasswordBoxText">Re-Password</string>
    <string name="firstNameEntry">null</string>
    <string name="secondNameEntry">null</string>
    <string name="emailEntry">null</string>
    <string name="passwordEntry">null</string>
    <string name="signInText">Do you already have an account? Click here to Log-In.</string>

    <string name="signupText">Don\'t have an account? Create one here!.</string>
    <string name="firstNameText">First name:</string>
    <string name="secondNameText">Last name:</string>
    <string name="emailText">Email Address:</string>
    <string name="passwordText">Password:</string>
    <string name="passwordConfirmText">Confirm password:</string>
    <string name="CreateAccount">Create Account</string>
    <string name="confirmDetailsButtonText">Sign-Up</string>
    <string name="accountCreationText">Welcome to BizzBuzz. Enter your details to Sign-Up.</string>
    <string name="loginB">Log-In</string>
    <string name="signupB">Sign-Up</string>
    <string name="Welcome">Welcome to BizzBuzz</string>
    <string name="ToDo">Image Description</string>

    <string name="previousMonthButtonText"><![CDATA[<-]]></string>
    <string name="nextMonthButtonText"><![CDATA[->]]></string>

    <string name="title_activity_main_menu">MainMenu</string>
    <string name="todo">TODO</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="message">Message</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="communication">Communication</string>
    <string name="string_communication" />
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="mainMenuTitle">Main Menu | Bizz Buzz</string>
    <string name="tab_feed_text">FEED</string>
    <string name="tab_timetable_text">TIMETABLE</string>
    <string name="tab_events_text">EVENTS</string>
    <string name="tab_friends_text">FRIENDS</string>
    <string name="tab_chat_text">CHAT</string>
    <string name="editProfileButton">Edit Profile</string>
    <string name="weeklyButtonText">Weekly</string>
    <string name="newEventButtonText">New Event</string>
    <string name="eventNameTextViewText">Name:</string>
    <string name="eventDateTextViewText">Date</string>
    <string name="eventTimeTextViewText">Time</string>
    <string name="saveEventButtonText">Save</string>
    >>>>>>> master
    <string name="FeedbackTitle">Feedback</string>
    <string name="ReportBugsTitle">Report Bugs</string>
    <string name="FeedbackDesc">Here you can provide feedback to the developers to help us to improve the app and the experience it provides.</string>
    <string name="FeedbackHeadText">Enter feedback subject here:</string>
    <string name="FeedbackBody">Enter your feedback below:</string>
    <string name="FeedbackHeadHint">Feedback Subject Here</string>
    <string name="FeedbackBodyHint">Feedback Here</string>
    <string name="FeedbackCancel"><![CDATA[Cancel & Return To Main Menu]]></string>
    <string name="FeedbackSend"><![CDATA[Send & Return To Main Menu]]></string>
    <string name="BugsDesc">Here you can report any bugs you have come across. You can help us keep the app bug-free by telling us the page you come across the bug, the device you are on and what the bug did.</string>
    <string name="BugsDeviceText">Enter your device here:</string>
    <string name="BugsDeviceHint">Device Here</string>
    <string name="BugsPageText">Enter the page here:</string>
    <string name="BugsPageHint">Page Here</string>
    <string name="BugsExplanationText">Give an explanation of the bug (How you came across it &amp; What the bug did) *Not required</string>
    <string name="BugsExplanationHint">Explanation Here</string>
    <string name="BugsSend">Send &amp; Return To Main Menu</string>
    <string name="BugsCancel">Cancel &amp; Return To Main Menu</string>
    <string name="ReportBugsAccess">Report a bug</string>
    <string name="FeedbackAccess">Give some feedback to the devs</string>
    <string name="SettingsButton">Settings</string>
    <string name="SignOutButton">SIGN OUT</string>
    <string name="TimetableButton">Timetable</string>
</resources>